test/spec_vectors/conversions/fail/module_16.wat
(module (func (result f32) (f32.convert_i64_s (i32.const 0))))